--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "gulp test",
     "start": "node app",
-    "postinstall": "gulp default"
+    "postinstall": "gulp install"
   },
   "devDependencies": {
     "estraverse": "~4.1.0",
