--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
   },
   "scripts": {
     "test": "gulp test",
-    "build": "gulp",
-    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt/bin/grunt install"
+    "build": ["gulp", "bower"]
   },
   "devDependencies": {
     "estraverse": "~4.1.0",
